# kg-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
configs/schema_profiles/: generic.yaml
scripts/: check_neo4j_connection.py  inspect_schema.py  run_agent.py
src/agent/: graph.py  nodes.py  prompts.py  runner.py  state.py
src/core/: config.py  exceptions.py  logging.py  observability.py
src/graph/: __init__.py  cypher.py  neo4j_client.py  query_validator.py  schema.py  template_engine.py  text2cypher.py
src/retrieval/: __init__.py  context_builder.py  result_ranker.py
src/tools/: __init__.py  preparation_tools.py  registry.py  schemas.py  text2cypher_tools.py
tests/integration/: test_neo4j_tools.py
tests/unit/: conftest.py  test_agent_tool_routing.py  test_context_builder.py  test_cypher_templates.py  test_preparation_tools.py  test_query_validator.py  test_text2cypher.py  test_tool_registry.py  test_tool_schemas.py
