[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag"
version = "0.1.0"
description = "Standalone LLM-powered GraphRAG agent for read-only Neo4j technical-document question answering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-core",
  "langchain-openai",
  "langfuse",
  "langgraph",
  "neo4j",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/agent",
  "src/core",
  "src/graph",
  "src/tools",
  "src/retrieval",
  "src/evaluation",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
